--- a/style/css/style.css
+++ b/style/css/style.css
@@ -8,4 +8,8 @@
   width: 40px;
 }
 
+.sombra {
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
 /*# sourceMappingURL=style.css.map */
