--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -7,3 +7,8 @@
 .logo {
 	width: 40px;
 }
+
+.sombra{
+	//text-shadow: 0.1em 0.1em #333;
+	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
