--- a/style/css/style.css
+++ b/style/css/style.css
@@ -12,4 +12,14 @@
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
+.fundo-carousel{ 
+    
+    background-image: url("images/fundo_azul.jpg") !important;
+    background-color: #cccccc;
+    background-repeat: no-repeat !important;
+
+    background-size: cover !important;
+
+}
+
 /*# sourceMappingURL=style.css.map */
